# telegram-talking-ai-agent

./: .env.example  .gitignore  LICENSE  README.md  client_secret.json.example  env.example  pyproject.toml
data/: .gitkeep
src/: config.py  main.py
src/ai/: __init__.py  google_oauth.py  qwen_oauth.py  response_generator.py  style_analyzer.py
src/database/: models.py  repository.py
src/telegram/: __init__.py  client.py  message_fetcher.py
src/tg_talking_agent.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ui/: __init__.py  menu.py
